WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35429
Fail to build on 64-bit sparc
https://bugs.webkit.org/show_bug.cgi?id=35429
Summary
Fail to build on 64-bit sparc
Aurelien Jarno
Reported
2010-02-26 05:40:55 PST
webkit fails to build on 64-bit sparc. It needs a small tweak in the Platform.h file: --- a/src/3rdparty/webkit/JavaScriptCore/wtf/Platform.h +++ b/src/3rdparty/webkit/JavaScriptCore/wtf/Platform.h @@ -740,7 +740,7 @@ #endif #if !defined(WTF_USE_JSVALUE64) && !defined(WTF_USE_JSVALUE32) && !defined(WTF_USE_JSVALUE32_64) -#if (PLATFORM(X86_64) && (PLATFORM(UNIX) || PLATFORM(WIN_OS))) || PLATFORM(IA64) || PLATFORM(ALPHA) +#if (PLATFORM(X86_64) && (PLATFORM(UNIX) || PLATFORM(WIN_OS))) || PLATFORM(IA64) || PLATFORM(ALPHA) || PLATFORM(SPARC64) #define WTF_USE_JSVALUE64 1 #elif PLATFORM(ARM) || PLATFORM(PPC64) #define WTF_USE_JSVALUE32 1
Attachments
Proposed patch to fix compilation on sparc64
(1.14 KB, patch)
2010-03-18 14:10 PDT
,
Tom Callaway
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2010-02-26 19:36:02 PST
See also:
bug 35326
. Would you be willing to submit a patch for review, as documented in <
http://webkit.org/coding/contributing.html
>?
Tom Callaway
Comment 2
2010-03-18 14:10:33 PDT
Created
attachment 51090
[details]
Proposed patch to fix compilation on sparc64
WebKit Commit Bot
Comment 3
2010-03-18 23:29:27 PDT
Comment on
attachment 51090
[details]
Proposed patch to fix compilation on sparc64 Clearing flags on attachment: 51090 Committed
r56215
: <
http://trac.webkit.org/changeset/56215
>
WebKit Commit Bot
Comment 4
2010-03-18 23:29:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug