2010-03-18  Tom Callaway  <tcallawa@redhat.com>

Reviewed by Darin Adler.

        Bug 35429: Fix compile on SPARC64
        https://bugs.webkit.org/show_bug.cgi?id=35429

        * wtf/Platform.h: Set WTF_USE_JSVALUE64 for SPARC64

Canonical link: https://commits.webkit.org/47509@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56215 268f45cc-cd09-0410-ab3c-d52691b4dbfc